<resources>
    <string name="app_name">DuoCase3ProCyclingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Belfort_to_Le_Markstein" />
    <string name="Community_activities">Community activities</string>
    <string name="batteryPercentageTextView">Battery Percentage: N/A</string>
    <string name="tour_de_france">Tour de France</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="video_title">Video Title</string>
</resources>